# mx-experiments-sc

./: Cargo.toml  README.md
gas-burner/: Cargo.toml
gas-burner-contracts/: README.md
gas-burner-contracts/gas-burner/: Cargo.toml
gas-burner-contracts/gas-burner/src/: lib.rs  rewards.rs  signature.rs  week_timekeeping.rs  work.rs
gas-burner-contracts/gas-burner/tests/: gas_burner_test.rs
gas-burner-contracts/gas-burner/tests/gas_burner_setup/: mod.rs
gas-burner-contracts/gas-burner/wasm/: Cargo.toml
gas-burner-contracts/gas-burner/wasm/src/: lib.rs
gas-burner-contracts/owner-sc/: Cargo.toml
gas-burner-contracts/owner-sc/meta/: Cargo.toml
gas-burner-contracts/owner-sc/meta/src/: main.rs
gas-burner-contracts/owner-sc/src/: lib.rs
gas-burner-contracts/owner-sc/wasm/: Cargo.toml
gas-burner-contracts/owner-sc/wasm/src/: lib.rs
gas-burner/meta/: Cargo.toml
gas-burner/meta/src/: main.rs
gas-burner/src/: leaderboard.rs  lib.rs  rewards.rs  week_timekeeping.rs  work.rs
gas-burner/wasm/src/: lib.rs
map-generation/: Cargo.toml
map-generation/meta/: Cargo.toml
map-generation/meta/src/: main.rs
map-generation/src/: lib.rs  map.rs  random.rs
map-generation/wasm/: Cargo.toml
map-generation/wasm/src/: lib.rs
nft-series-minter/: Cargo.toml  sc-config.toml
nft-series-minter/meta/: Cargo.toml
nft-series-minter/meta/src/: main.rs
nft-series-minter/src/: lib.rs  nft_module.rs  nft_series_minter.rs  nft_series_minter_proxy.rs
nft-series-minter/wasm/: Cargo.toml
nft-series-minter/wasm/src/: lib.rs
