[package]
name = "gas-burner"
version = "0.0.0"
authors = ["you"]
edition = "2021"
publish = false

[lib]
path = "src/lib.rs"

[dependencies.multiversx-sc]
version = "=0.52.3"

[dependencies.multiversx-sc-modules]
version = "=0.52.3"

[dependencies.owner-sc]
path = "../owner-sc"

[dev-dependencies]
num-bigint = "0.4"

[dev-dependencies.multiversx-sc-scenario]
version = "=0.52.3"
